; ModuleID = '/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/arm_atsam/usb/extr_usb.c_usb_device_endpoint_setup_buffer_job.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/arm_atsam/usb/extr_usb.c_usb_device_endpoint_setup_buffer_job.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_18__ = type { %struct.TYPE_14__* }
%struct.TYPE_14__ = type { %struct.TYPE_13__* }
%struct.TYPE_13__ = type { %struct.TYPE_12__, %struct.TYPE_10__ }
%struct.TYPE_12__ = type { %struct.TYPE_11__ }
%struct.TYPE_11__ = type { i32, i64 }
%struct.TYPE_10__ = type { i64 }
%struct.usb_module = type { %struct.TYPE_17__, %struct.usb_module* }
%struct.TYPE_17__ = type { %struct.TYPE_16__* }
%struct.TYPE_16__ = type { %struct.TYPE_15__ }
%struct.TYPE_15__ = type { i32 }

@usb_descriptor_table = common dso_local global %struct.TYPE_18__ zeroinitializer, align 8
@USB_DEVICE_EPSTATUSCLR_BK0RDY = common dso_local global i32 0, align 4
@STATUS_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @usb_device_endpoint_setup_buffer_job(%struct.usb_module* %0, i32* %1) #0 {
  %3 = alloca %struct.usb_module*, align 8
  %4 = alloca i32*, align 8
  store %struct.usb_module* %0, %struct.usb_module** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load %struct.usb_module*, %struct.usb_module** %3, align 8
  %6 = call i32 @Assert(%struct.usb_module* %5)
  %7 = load %struct.usb_module*, %struct.usb_module** %3, align 8
  %8 = getelementptr inbounds %struct.usb_module, %struct.usb_module* %7, i32 0, i32 1
  %9 = load %struct.usb_module*, %struct.usb_module** %8, align 8
  %10 = call i32 @Assert(%struct.usb_module* %9)
  %11 = load i32*, i32** %4, align 8
  %12 = ptrtoint i32* %11 to i64
  %13 = load %struct.TYPE_14__*, %struct.TYPE_14__** getelementptr inbounds (%struct.TYPE_18__, %struct.TYPE_18__* @usb_descriptor_table, i32 0, i32 0), align 8
  %14 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %13, i64 0
  %15 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %14, i32 0, i32 0
  %16 = load %struct.TYPE_13__*, %struct.TYPE_13__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %16, i64 0
  %18 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %17, i32 0, i32 1
  %19 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %18, i32 0, i32 0
  store i64 %12, i64* %19, align 8
  %20 = load %struct.TYPE_14__*, %struct.TYPE_14__** getelementptr inbounds (%struct.TYPE_18__, %struct.TYPE_18__* @usb_descriptor_table, i32 0, i32 0), align 8
  %21 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %20, i64 0
  %22 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %21, i32 0, i32 0
  %23 = load %struct.TYPE_13__*, %struct.TYPE_13__** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %23, i64 0
  %25 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %24, i32 0, i32 0
  %26 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %25, i32 0, i32 0
  %27 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %26, i32 0, i32 0
  store i32 8, i32* %27, align 8
  %28 = load %struct.TYPE_14__*, %struct.TYPE_14__** getelementptr inbounds (%struct.TYPE_18__, %struct.TYPE_18__* @usb_descriptor_table, i32 0, i32 0), align 8
  %29 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %28, i64 0
  %30 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %29, i32 0, i32 0
  %31 = load %struct.TYPE_13__*, %struct.TYPE_13__** %30, align 8
  %32 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %31, i64 0
  %33 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %32, i32 0, i32 0
  %34 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %33, i32 0, i32 0
  %35 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %34, i32 0, i32 1
  store i64 0, i64* %35, align 8
  %36 = load i32, i32* @USB_DEVICE_EPSTATUSCLR_BK0RDY, align 4
  %37 = load %struct.usb_module*, %struct.usb_module** %3, align 8
  %38 = getelementptr inbounds %struct.usb_module, %struct.usb_module* %37, i32 0, i32 1
  %39 = load %struct.usb_module*, %struct.usb_module** %38, align 8
  %40 = getelementptr inbounds %struct.usb_module, %struct.usb_module* %39, i32 0, i32 0
  %41 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %40, i32 0, i32 0
  %42 = load %struct.TYPE_16__*, %struct.TYPE_16__** %41, align 8
  %43 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %42, i64 0
  %44 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %43, i32 0, i32 0
  %45 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %44, i32 0, i32 0
  store i32 %36, i32* %45, align 4
  %46 = load i32, i32* @STATUS_OK, align 4
  ret i32 %46
}

declare dso_local i32 @Assert(%struct.usb_module*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
